@@ -97,6 +97,22 @@ class Language {
 		'iranian-calendar-m10', 'iranian-calendar-m11', 'iranian-calendar-m12'
 	);
 
+	static public $mHebrewCalendarMonthMsgs = array(
+		'hebrew-calendar-m1', 'hebrew-calendar-m2', 'hebrew-calendar-m3',
+		'hebrew-calendar-m4', 'hebrew-calendar-m5', 'hebrew-calendar-m6',
+		'hebrew-calendar-m7', 'hebrew-calendar-m8', 'hebrew-calendar-m9',
+		'hebrew-calendar-m10', 'hebrew-calendar-m11', 'hebrew-calendar-m12',
+		'hebrew-calendar-m6a', 'hebrew-calendar-m6b'
+	);
+
+	static public $mHebrewCalendarMonthGenMsgs = array(
+		'hebrew-calendar-m1-gen', 'hebrew-calendar-m2-gen', 'hebrew-calendar-m3-gen',
+		'hebrew-calendar-m4-gen', 'hebrew-calendar-m5-gen', 'hebrew-calendar-m6-gen',
+		'hebrew-calendar-m7-gen', 'hebrew-calendar-m8-gen', 'hebrew-calendar-m9-gen',
+		'hebrew-calendar-m10-gen', 'hebrew-calendar-m11-gen', 'hebrew-calendar-m12-gen',
+		'hebrew-calendar-m6a-gen', 'hebrew-calendar-m6b-gen'
+	);
+
 	/**
 	 * Create a language object for a given language code
 	 */
@@ -404,6 +420,14 @@ class Language {
 		return $this->getMessageFromDB( self::$mIranianCalendarMonthMsgs[$key-1] );
 	}
 
+	function getHebrewCalendarMonthName( $key ) {
+		return $this->getMessageFromDB( self::$mHebrewCalendarMonthMsgs[$key-1] );
+	}
+
+	function getHebrewCalendarMonthNameGen( $key ) {
+		return $this->getMessageFromDB( self::$mHebrewCalendarMonthGenMsgs[$key-1] );
+	}
+
 
 	/**
 	 * Used by date() and time() to adjust the time output.
@@ -473,6 +497,7 @@ class Language {
 	 *    xn   Do not translate digits of the next numeric format character
 	 *    xN   Toggle raw digit (xn) flag, stays set until explicitly unset
 	 *    xr   Use roman numerals for the next numeric format character
+	 *    xh   Use hebrew numerals for the next numeric format character
 	 *    xx   Literal x
 	 *    xg   Genitive month name
 	 *
@@ -480,6 +505,12 @@ class Language {
 	 *    xiF  F (month name) in Iranian calendar
 	 *    xin  n (month number) in Iranian calendar
 	 *    xiY  Y (full year) in Iranian calendar
+	 *
+	 *    xjj  j (day number) in Hebrew calendar
+	 *    xjF  F (month name) in Hebrew calendar
+	 *    xjx  xg (genitive month name) in Hebrew calendar
+	 *    xjn  n (month number) in Hebrew calendar
+	 *    xjY  Y (full year) in Hebrew calendar
 	 *
 	 * Characters enclosed in double quotes will be considered literal (with
 	 * the quotes themselves removed). Unmatched quotes will be considered
@@ -502,9 +533,11 @@ class Language {
 		$s = '';
 		$raw = false;
 		$roman = false;
+		$hebrewNum = false;
 		$unix = false;
 		$rawToggle = false;
 		$iranian = false;
+		$hebrew = false;
 		for ( $p = 0; $p < strlen( $format ); $p++ ) {
 			$num = false;
 			$code = $format[$p];
@@ -512,7 +545,7 @@ class Language {
 				$code .= $format[++$p];
 			}
 
-			if ( $code === 'xi' && $p < strlen( $format ) - 1 ) {
+			if ( ( $code === 'xi' || $code == 'xj' ) && $p < strlen( $format ) - 1 ) {
 				$code .= $format[++$p];
 			}
 
@@ -529,8 +562,15 @@ class Language {
 				case 'xr':
 					$roman = true;
 					break;
+				case 'xh':
+					$hebrewNum = true;
+					break;
 				case 'xg':
 					$s .= $this->getMonthNameGen( substr( $ts, 4, 2 ) );
+					break;
+				case 'xjx':
+					if ( !$hebrew ) $hebrew = self::tsToHebrew( $ts );
+					$s .= $this->getHebrewCalendarMonthNameGen( $hebrew[1] );
 					break;
 				case 'd':
 					$num = substr( $ts, 6, 2 );
@@ -545,6 +585,10 @@ class Language {
 				case 'xij':
 					if ( !$iranian ) $iranian = self::tsToIranian( $ts );
 					$num = $iranian[2];
+					break;
+				case 'xjj':
+					if ( !$hebrew ) $hebrew = self::tsToHebrew( $ts );
+					$num = $hebrew[2];
 					break;
 				case 'l':
 					if ( !$unix ) $unix = wfTimestamp( TS_UNIX, $ts );
@@ -574,6 +618,10 @@ class Language {
 					if ( !$iranian ) $iranian = self::tsToIranian( $ts );
 					$s .= $this->getIranianCalendarMonthName( $iranian[1] );
 					break;
+				case 'xjF':
+					if ( !$hebrew ) $hebrew = self::tsToHebrew( $ts );
+					$s .= $this->getHebrewCalendarMonthName( $hebrew[1] );
+					break;
 				case 'm':
 					$num = substr( $ts, 4, 2 );
 					break;
@@ -586,6 +634,10 @@ class Language {
 				case 'xin':
 					if ( !$iranian ) $iranian = self::tsToIranian( $ts );
 					$num = $iranian[1];
+					break;
+				case 'xjn':
+					if ( !$hebrew ) $hebrew = self::tsToHebrew( $ts );
+					$num = $hebrew[1];
 					break;
 				case 't':
 					if ( !$unix ) $unix = wfTimestamp( TS_UNIX, $ts );
@@ -601,6 +653,10 @@ class Language {
 				case 'xiY':
 					if ( !$iranian ) $iranian = self::tsToIranian( $ts );
 					$num = $iranian[0];
+					break;
+				case 'xjY':
+					if ( !$hebrew ) $hebrew = self::tsToHebrew( $ts );
+					$num = $hebrew[0];
 					break;
 				case 'y':
 					$num = substr( $ts, 2, 2 );
@@ -677,6 +733,9 @@ class Language {
 				} elseif ( $roman ) {
 					$s .= self::romanNumeral( $num );
 					$roman = false;
+				} elseif( $hebrewNum ) {
+					$s .= self::hebrewNumeral( $num );
+					$hebrewNum = false;
 				} else {
 					$s .= $this->formatNum( $num, true );
 				}
@@ -745,6 +804,145 @@ class Language {
 	}
 
 	/**
+	 * Converting Gregorian dates to Hebrew dates.
+	 *
+	 * Based on a JavaScript code by Abu Mami and Yisrael Hersch
+	 * (abu-mami@kaluach.net, http://www.kaluach.net), who permitted
+	 * to translate the relevant functions into PHP and release them under
+	 * GNU GPL.
+	 */
+	private static function tsToHebrew( $ts ) {
+		# Parse date
+		$year = substr( $ts, 0, 4 );
+		$month = substr( $ts, 4, 2 );
+		$day = substr( $ts, 6, 2 );
+
+		# Month number when March = 1, February = 12
+		$month -= 2;
+		if( $month <= 0 ) {
+			# January of February
+			$month += 12;
+			$year--;
+		}
+
+		# Days since 1 March - calculating 30 days a month,
+		# and then adding the missing number of days
+		$day += (int)( 7 * $month / 12 + 30 * ( $month - 1 ) );
+		# Calculate Hebrew year for days after 1 Nisan
+		$hebrewYear = $year + 3760;
+		# Passover date for this year (as days since 1 March)
+		$passover = self::passoverDate( $hebrewYear );
+		if( $day <= $passover - 15 ) {
+			# Day is before 1 Nisan (passover is 15 Nisan) - it is the previous year
+			# Next year's passover (as days since 1 March)
+			$anchor = $passover;
+			# Add days since previous year's 1 March
+			$day += 365;
+			if( ( $year % 400 == 0 ) || ( $year % 100 != 0 && $year % 4 == 0 ) ) {
+				# Leap year
+				$day++;
+			}
+			# Previous year
+			$year--;
+			$hebrewYear--;
+			# Passover date for the new year (as days since 1 March)
+			$passover = self::passoverDate( $hebrewYear );
+		} else {
+			# Next year's passover (as days since 1 March)
+			$anchor = self::passoverDate( $hebrewYear + 1 );
+		}
+
+		# Days since 1 Nisan
+		$day -= $passover - 15;
+		# Difference between this year's passover date by gregorian calendar,
+		# and the next year's one + 12 days. This should be 1 days for a regular year,
+		# but 0 for incomplete one, 2 for complete, and those + 30 days of Adar I
+		# for a leap year.
+		$anchor -= $passover - 12;
+		$nextYear = $year + 1;
+		if( ( $nextYear % 400 == 0 ) || ( $nextYear % 100 != 0 && $nextYear % 4 == 0 ) ) {
+			# Next year is a leap year - difference is growing
+			$anchor++;
+		}
+
+		# Calculate day in the month from number of days sine 1 Nisan
+		# Don't check Adar - if the day is not in adar, we will stop before;
+		# if it is in adar, we will use it to check if it is Adar I or Adar II
+		for( $month = 0; $month < 11; $month++ ) {
+			# Calculate days in this month
+			if( $month == 7 && $anchor % 30 == 2 ) {
+				# Cheshvan in a complete year (otherwise as the rule below)
+				$days = 30;
+			} else if( $month == 8 && $anchor % 30 == 0 ) {
+				# Kislev in an incomplete year (otherwise as the rule below)
+				$days = 29;
+			} else {
+				# Even months have 30 days, odd have 29
+				$days = 30 - $month % 2;
+			}
+			if( $day <= $days ) {
+				# In this month
+				break;
+			}
+			# Try in next months
+			$day -= $days;
+		}
+
+		# Now we move to a year from Tishrei
+		if( $month >= 6 ) {
+			# After Tishrei, use next year
+			$hebrewYear++;
+		}
+		# Recalculate month number so that we start from Tishrei
+		$month = ( $month + 6 ) % 12 + 1;
+
+		# Fix Adar
+		if( $month == 6 && $anchor >= 30 ) {
+			# This *is* adar, and this year is leap
+			if( $day > 30 ) {
+				# Adar II
+				$month = 14;
+				$day -= 30;
+			} else {
+				# Adar I
+				$month = 13;
+			}
+		}
+
+		return array( $hebrewYear, $month, $day );
+	}
+
+	/**
+	 * Based on Carl Friedrich Gauss algorithm for finding Easter date.
+	 * Used for Hebrew date.
+	 */
+	private static function passoverDate( $year ) {
+		$a = (int)( ( 12 * $year + 17 ) % 19 );
+		$b = (int)( $year % 4 );
+		$m = 32.044093161144 + 1.5542417966212 * $a +  $b / 4.0 - 0.0031777940220923 * $year;
+		if( $m < 0 ) {
+			$m--;
+		}
+		$Mar = (int)$m;
+		if( $m < 0 ) {
+			$m++;
+		}
+		$m -= $Mar;
+
+		$c = (int)( ( $Mar + 3 * $year + 5 * $b + 5 ) % 7);
+		if( $c == 0 && $a > 11 && $m >= 0.89772376543210 ) {
+			$Mar++;
+		} else if( $c == 1 && $a > 6 && $m >= 0.63287037037037 ) {
+			$Mar += 2;
+		} else if( $c == 2 || $c == 4 || $c == 6 ) {
+			$Mar++;
+		}
+
+		$Mar += (int)( ( $year - 3760 ) / 100 ) - (int)( ( $year - 3760 ) / 400 ) - 2;
+		return $Mar;
+	}
+
+	/**
 	 * Roman number formatting up to 3000
 	 */
 	static function romanNumeral( $num ) {
@@ -768,6 +966,46 @@ class Language {
 			$num = $num % $pow10;
 		}
 		return $s;
+	}
+
+ 	/**
+	 * Hebrew Gematria number formatting up to 9999
+	 */
+	static function hebrewNumeral( $num ) {
+		static $table = array(
+			array( '', 'א', 'ב', 'ג', 'ד', 'ה', 'ו', 'ז', 'ח', 'ט', 'י' ),
+			array( '', 'י', 'כ', 'ל', 'מ', 'נ', 'ס', 'ע', 'פ', 'צ', 'ק' ),
+			array( '', 'ק', 'ר', 'ש', 'ת', 'תק', 'תר', 'תש', 'תת', 'תתק', 'תתר' ),
+			array( '', 'א', 'ב', 'ג', 'ד', 'ה', 'ו', 'ז', 'ח', 'ט', 'י' )
+		);
+
+		$num = intval( $num );
+		if ( $num > 9999 || $num <= 0 ) {
+			return $num;
+		}
+
+		$s = '';
+		for ( $pow10 = 1000, $i = 3; $i >= 0; $pow10 /= 10, $i-- ) {
+			if ( $num >= $pow10 ) {
+				if ( $num == 15 || $num == 16 ) {
+					$s .= $table[0][9] . $table[0][$num - 10];
+					$num = 0;
+				} else {
+					$s .= $table[$i][(int)( $num / $pow10 )];
+					if( $pow10 == 1000 ) {
+						$s .= "'";
+					}
+				}
+			}
+			$num = $num % $pow10;
+		}
+		if( strlen( $s ) == 2 ) {
+			$str = $s . "'";
+		} else  {
+			$str = substr( $s, 0, strlen( $s ) - 2 ) . '"';
+			$str .= substr( $s, strlen( $s ) - 2, 2 );
+		}
+		return $str;
 	}
 
 	/**
